fix problem with cursor (on mobile), reset the transition for the first load

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -242,23 +242,23 @@ mark {
 
 @media screen and (max-width: 640px) {
   h1 {
-    font-size: 4.501rem;
+    font-size: 4.007rem;
   }
 
   h2 {
-    font-size: 3.3rem;
+    font-size: 3.036rem;
   }
 
   h3 {
-    font-size: 2.466rem;
+    font-size: 2.3rem;
   }
 
   h4 {
-    font-size: 1.825rem;
+    font-size: 1.742rem;
   }
 
   h5 {
-    font-size: 1.351rem;
+    font-size: 1.32rem;
   }
 }
 
